# Kazumi

./: .gitattributes  .gitignore  Kazumi_HarmonyOS_ArkTS_适配方案.md  mpv-adaptation-guide.md
AppScope/: app.json5
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  _gen.py  fix_needed.py  mpv_client_napi.cpp  mpv_client_napi_stub.cpp  mpv_client_wrapper.cpp  mpv_client_wrapper.h  mpv_event_handler.cpp  mpv_event_handler.h  ohos_surface_helper.cpp  ohos_surface_helper.h  set_soname.py
entry/src/main/cpp/types/: libmpv_napi.d.ts
entry/src/main/ets/constants/: AppConstants.ets  RdbConstants.ets  RecommendTags.ets
entry/src/main/ets/controller/: CollectController.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/models/: AnimeItem.ets  CollectChangeRecord.ets  CollectType.ets  CollectedBangumi.ets  DanmakuItem.ets  Episode.ets  EpisodeData.ets  FavoriteRecord.ets  HistoryRecord.ets  PlaybackRoad.ets  PlayerState.ets  PluginSearchState.ets  RecommendCardModel.ets  RuleCatalogItem.ets  RuleRuntimeModel.ets  RuleSource.ets  SearchHistory.ets  SearchResultCard.ets  SeasonRange.ets  UserSettings.ets
entry/src/main/ets/network/: CookieManager.ets  HttpClient.ets  RequestConfig.ets  ResponseWrapper.ets  SecurityPolicy.ets
entry/src/main/ets/pages/: AVPlayerPocPage.ets  HtmlXPathPocPage.ets  Index.ets  WebViewSnifferPocPage.ets
entry/src/main/ets/services/: RuleCatalogService.ets
entry/src/main/ets/store/: BundledRuleSourceLoader.ets  CollectChangeSignal.ets  CollectChangeStore.ets  DataMigration.ets  DefaultRuleSources.ets  FavoriteStore.ets  FileStore.ets  HistoryStore.ets  ImageCacheStore.ets  PreferencesStore.ets  RdbManager.ets  RdbMigration.ets  RdbSchema.ets  RuleSourceSeeder.ets  RuleSourceStore.ets  SearchHistoryStore.ets  (+1 more)
native/: ENABLE_NATIVE_BUILD.md  README.md
native/patches/: ffmpeg-hls-kazumi-combined.patch
native/scripts/: build_all_ohos.sh  build_ffmpeg_ohos.sh  build_freetype_ohos.sh  build_harfbuzz_ohos.sh  build_libass_ohos.sh  build_libmpv_ohos.sh  build_libplacebo_ohos.sh  build_mbedtls_ohos.sh  build_native_wsl.bat  copy_headers_to_project.sh  fix_pkgconfig.py  fix_pkgconfig_versions.sh  gen_ffmpeg_pkgconfig.py  gen_ffmpeg_pkgconfig.sh  gen_wrappers.py  install_ffmpeg.sh  install_ffmpeg_headers.sh  patch_mpv_meson.py  rebuild_ohcodec.sh  run_ffmpeg_rebuild.sh  run_libmpv_rebuild.sh  setup_ndk_link.sh  start_ffmpeg_rebuild_bg.sh  start_libmpv_rebuild_bg.sh  test_wrapper.sh
(+123 files in other folders)
